--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "*.config": "nextflow",
+        "bin/phylotreegen": "julia",
         "bin/sequence-table": "julia"
     }
 }
