--- a/nextflow.config
+++ b/nextflow.config
@@ -75,6 +75,12 @@ params {
     skip_haplotype = false
     skip_phylogenetics = false
 
+    // Remote resource options
+    phylotree_css = 'https://cdn.jsdelivr.net/npm/phylotree@1.0.13/dist/phylotree.css'
+    d3_js = 'https://cdn.jsdelivr.net/npm/d3@5.16.0/dist/d3.min.js'
+    underscore_js = 'https://cdn.jsdelivr.net/npm/underscore@1.13.2/underscore-umd.min.js'
+    phylotree_js = 'https://cdn.jsdelivr.net/npm/phylotree@1.0.13/dist/phylotree.min.js'
+
     // MultiQC options
     multiqc_config = null
     multiqc_title = null
