Put Nextflow report back into trace directory

--- a/nextflow.config
+++ b/nextflow.config
@@ -211,8 +211,7 @@ timeline {
 }
 report {
     enabled = true
-    // file    = "${params.tracedir}/execution_report_${trace_timestamp}.html"
-    file = "${params.outdir}/report/nextflow_report.html"
+    file    = "${params.tracedir}/execution_report_${trace_timestamp}.html"
 }
 trace {
     enabled = true
