--- a/nextflow.config
+++ b/nextflow.config
@@ -76,6 +76,7 @@ params {
     skip_phylogenetics = false
 
     // Remote resource options
+    igv_js = 'https://cdn.jsdelivr.net/npm/igv@2.11.0/dist/igv.js'
     phylotree_css = 'https://cdn.jsdelivr.net/npm/phylotree@1.0.13/dist/phylotree.css'
     d3_js = 'https://cdn.jsdelivr.net/npm/d3@5.16.0/dist/d3.min.js'
     underscore_js = 'https://cdn.jsdelivr.net/npm/underscore@1.13.2/underscore-umd.min.js'
