Refactor sequence table script and module to use mustache and multiqc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
         "*.config": "nextflow",
         "bin/igvgen": "julia",
         "bin/phylotreegen": "julia",
-        "bin/sequence-table": "julia"
+        "bin/sequencetable": "julia"
     }
 }
