--- a/nextflow.config
+++ b/nextflow.config
@@ -200,7 +200,7 @@ env {
     PYTHONNOUSERSITE = 1
     R_PROFILE_USER   = "/.Rprofile"
     R_ENVIRON_USER   = "/.Renviron"
-    JULIA_DEPOT_PATH = "/usr/local/share/julia"
+    JULIA_DEPOT_PATH = "\$PWD:/usr/local/share/julia"
 }
 
 // Capture exit codes from upstream processes when piping
