Update test profiles to be self-contained
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/test.config
+++ b/conf/test.config
@@ -14,7 +14,6 @@ params {
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
     input = 'https://github.com/ksumngs/nf-test-datasets/raw/yavsap/samplesheet/illumina-pe-deinterleaved.tsv'
-    outdir = 'results'
     platform = 'illumina'
     paired = true
     interleaved = false
@@ -23,3 +22,6 @@ params {
     mafft_method = '--retree 1 --maxiterate 0'
     phylogenetic_bootstraps = 10
 }
+
+tower.enabled = false
+process.errorStrategy = 'terminate'
