--- a/conf/test_nanopore.config
+++ b/conf/test_nanopore.config
@@ -1,16 +1,19 @@
 params {
-    input       = 'https://raw.githubusercontent.com/ksumngs/nf-test-datasets/yavsap/samplesheet/nanopore.tsv'
-    platform    = 'nanopore'
-    paired      = false
-    interleaved = false
+    config_profile_name = 'Test profile (Nanopore)'
+    config_profile_description = 'Minimal Oxford Nanopore test dataset to check pipeline function'
 
+    input = 'https://raw.githubusercontent.com/ksumngs/nf-test-datasets/yavsap/samplesheet/nanopore.tsv'
+    outdir = 'results-nanopore'
+    platform = 'nanopore'
+    paired = false
+    interleaved = false
+    kraken2_db = 'https://genome-idx.s3.amazonaws.com/kraken/k2_viral_20210517.tar.gz'
     variant_depth = 7
     variant_frequency = 0.001
     variant_significance = 0.25
-
-    includeConfig 'test_params_common.config'
+    mafft_method = '--retree 1 --maxiterate 0'
+    phylogenetic_bootstraps = 10
 }
 
-process {
-    includeConfig 'test_process_common.config'
-}
+tower.enabled = false
+process.errorStrategy = 'terminate'
