--- a/conf/test_interleaved.config
+++ b/conf/test_interleaved.config
@@ -1,12 +1,16 @@
 params {
+    config_profile_name = 'Test profile (Interleaved)'
+    config_profile_description = 'Minimal test dataset to check pipeline function when processing interleaved Illumina reads'
+
     input       = 'https://github.com/ksumngs/nf-test-datasets/raw/yavsap/samplesheet/illumina-pe-interleaved.tsv'
     platform    = 'illumina'
     paired      = true
     interleaved = true
-
-    includeConfig 'test_params_common.config'
+    kraken2_db = 'https://genome-idx.s3.amazonaws.com/kraken/k2_viral_20210517.tar.gz'
+    cliquesnv_method = 'fast'
+    mafft_method = '--retree 1 --maxiterate 0'
+    phylogenetic_bootstraps = 10
 }
 
-process {
-    includeConfig 'test_process_common.config'
-}
+tower.enabled = false
+process.errorStrategy = 'terminate'
