--- a/nextflow.config
+++ b/nextflow.config
@@ -187,9 +187,9 @@ profiles {
     }
     test { includeConfig 'conf/test.config' }
     test_full { includeConfig 'conf/test_full.config' }
-    test_interleaved { includeConfig 'test_interleaved.config' } // Illumina PE Interleaved
-    test_se { includeConfig 'test_se.config' } // Illumina SE
-    test_nanopore { includeConfig 'test_nanopore.config' } // Nanopore
+    test_interleaved { includeConfig 'conf/test_interleaved.config' } // Illumina PE Interleaved
+    test_se { includeConfig 'conf/test_se.config' } // Illumina SE
+    test_nanopore { includeConfig 'conf/test_nanopore.config' } // Nanopore
 }
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
