--- a/modules/ksumngs/nf-modules/cliquesnv/illumina/meta.yml
+++ b/modules/ksumngs/nf-modules/cliquesnv/illumina/meta.yml
@@ -9,7 +9,7 @@ tools:
       description: Scalable Reconstruction of Intra-Host Viral Populations from NGS Reads
       homepage: https://github.com/vtsyvina/CliqueSNV
       doi: "10.1093/nar/gkab576 "
-      licence: ['MIT']
+      licence: ["MIT"]
 
 input:
   - meta:
