Update EDIRECT_EFETCH module

--- a/modules/ksumngs/nf-modules/edirect/efetch/meta.yml
+++ b/modules/ksumngs/nf-modules/edirect/efetch/meta.yml
@@ -8,7 +8,7 @@ tools:
       description: Entrez Direct (EDirect) is an advanced method for accessing the NCBI's set of interconnected databases (publication, sequence, structure, gene, variation, expression, etc.) from a UNIX terminal window. Functions take search terms from command-line arguments. Individual operations are combined to build multi-step queries. Record retrieval and formatting normally complete the process.
       homepage: https://eutils.ncbi.nlm.nih.gov/
       documentation: https://www.ncbi.nlm.nih.gov/books/NBK179288/
-      licence: ['PUBLIC DOMAIN']
+      licence: ["PUBLIC DOMAIN"]
 
 input:
   - search:
