--- a/modules/ksumngs/nf-modules/raxmlng/parse/meta.yml
+++ b/modules/ksumngs/nf-modules/raxmlng/parse/meta.yml
@@ -8,7 +8,7 @@ keywords:
   - maximum likelihood
 tools:
   - raxmlng:
-      description: 'RAxML Next Generation: faster, easier-to-use and more flexible'
+      description: "RAxML Next Generation: faster, easier-to-use and more flexible"
       homepage: https://github.com/amkozlov/raxml-ng
       documentation: https://github.com/amkozlov/raxml-ng/wiki
       tool_dev_url: https://github.com/amkozlov/raxml-ng
