--- a/modules/ksumngs/nf-modules/trimmomatic/meta.yml
+++ b/modules/ksumngs/nf-modules/trimmomatic/meta.yml
@@ -8,7 +8,7 @@ tools:
       homepage: http://www.usadellab.org/cms/?page=trimmomatic
       tool_dev_url: https://github.com/usadellab/Trimmomatic
       doi: "10.1093/bioinformatics/btu170"
-      licence: ['GPL v3']
+      licence: ["GPL v3"]
 
 input:
   - meta:
