Change MultiQC output to be index.html

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -319,7 +319,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/report" },
             mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('multiqc_report.html') ? filename : null }
+            saveAs: { filename -> filename.equals('multiqc_report.html') ? 'index.html' : null }
         ]
     }
 
