--- a/nextflow.config
+++ b/nextflow.config
@@ -185,6 +185,13 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
     }
+    gh {
+        params {
+            max_cpus = 2
+            max_memory = '6.GB'
+            max_time = '6.h'
+        }
+    }
     test { includeConfig 'conf/test.config' }
     test_full { includeConfig 'conf/test_full.config' }
     test_interleaved { includeConfig 'conf/test_interleaved.config' } // Illumina PE Interleaved
