--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,5 @@
-sphinx
-sphinx_rtd_theme
-myst-parser
-inflect
+myst-parser==0.17.2
+nf-core==2.4
+sphinx-multiversion==0.2.4
+sphinx==4.5
+sphinx_rtd_theme==1.0
