--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,34 +1,41 @@
 name: Documentation
 on:
-  - release
-  - workflow_dispatch
+  push:
+    branches:
+      - master
+      - develop
+  release:
+  workflow_dispatch:
 jobs:
-  build:
+  docs:
     name: Sphinx docs to gh-pages
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           submodules: true
-      - name: Install Sphinx 🇪🇬
+          fetch-depth: 0
+      - name: Install Python 🐍
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+          cache: "pip"
+      - name: Install Java ☕
+        uses: actions/setup-java@v3
+        with:
+          distribution: "temurin"
+          java-version: "11"
+      - name: Install Nextflow 🔀
+        run: |
+          sudo wget -O /usr/bin/nextflow https://github.com/nextflow-io/nextflow/releases/download/v21.10.3/nextflow
+      - name: Install Sphinx 🗿
         uses: logikal-code/pip-install@v1.0.0
         with:
           requirements: docs/requirements.txt
-      - name: Install nf-core Tools 🍎
-        run: |
-          python -m pip install nf-core
-      - name: Convert schema to docs 🧑‍⚖️
-        run: |
-          nf-core schema docs -f \
-            -o docs/parameters.md \
-            -x markdown \
-            -c 'parameter,description,type,required,default'
-          sed -i '1s/^.*/# Complete Parameter Reference/' docs/parameters.md
-          sed -i "3s/^.*/Every single parameter in the entire pipeline is described here. If you need to tweak every little detail of how your samples are analyzed, you've come to the right place! Note that *every* parameter is described here, even those that shouldn't be used, so proceed with caution!/" docs/parameters.md
       - name: Build docs 📝
         run: |
-          sphinx-build -b html docs docs/_build
+          sphinx-multiversion docs docs/_build
       - name: Collect 🧺
         uses: actions/upload-artifact@v2
         with:
@@ -41,3 +48,4 @@ jobs:
         with:
           branch: gh-pages
           folder: docs/_build
+          clean: false
