Switch reference genome to genbank download + seqret conversion

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -167,7 +167,7 @@ process {
     }
 
     // Reference genome download output
-    withName: '.*REFERENCE_DOWNLOAD:EDIRECT_EFETCH' {
+    withName: 'SEQRET_FASTA' {
         publishDir = [
             [
                 path: { "${params.outdir}/reference" },
