Add annotation downloading to reference download subworkflow

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -197,6 +197,22 @@ process {
         ]
     }
 
+    withName: 'SEQRET_GFF' {
+        ext.args = '-feature'
+        publishDir = [
+            [
+                path: { "${params.outdir}/reference" },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ],
+            [
+                path: { "${params.outdir}/report" },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : 'reference.gff' }
+            ]
+        ]
+    }
+
     // Kraken reports output
     withName: 'KRAKEN2' {
         publishDir = [
