--- a/conf/modules.config
+++ b/conf/modules.config
@@ -168,18 +168,7 @@ process {
 
     // Reference genome download output
     withName: 'SEQRET_FASTA' {
-        publishDir = [
-            [
-                path: { "${params.outdir}/reference" },
-                mode: params.publish_dir_mode,
-                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-            ],
-            [
-                path: { "${params.outdir}/report" },
-                mode: params.publish_dir_mode,
-                saveAs: { filename -> filename.equals('versions.yml') ? null : 'reference.fasta' }
-            ]
-        ]
+        ext.prefix = 'download'
     }
 
     withName: '.*REFERENCE_DOWNLOAD:SAMTOOLS_FAIDX' {
