Refactor strain genomes download to use meta channels

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -166,6 +166,10 @@ process {
         ext.args = '-p2'
     }
 
+    withName: '.*EDIRECT.*' {
+        ext.prefix = 'download'
+    }
+
     // Reference genome download output
     withName: 'SEQRET_FASTA' {
         ext.prefix = 'download'
