Add reference annotation concat to workflow

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -192,6 +192,9 @@ process {
 
     withName: 'SEQRET_GFF' {
         ext.args = '-feature'
+    }
+
+    withName: 'GFFCAT' {
         publishDir = [
             [
                 path: { "${params.outdir}/reference" },
