--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
         "bin/gffcat": "julia",
         "bin/igvgen": "julia",
         "bin/phylotreegen": "julia",
-        "bin/sequencetable": "julia"
-    },
-    "julia.environmentPath": "/home/tchristensen/src/github/ksumngs/yavsap/results/report"
+        "bin/sequencetable": "julia",
+        "bin/vartable": "julia"
+    }
 }
