fix: Change manifest name to include namespace

--- a/nextflow.config
+++ b/nextflow.config
@@ -249,7 +249,7 @@ dag {
 }
 
 manifest {
-    name = 'yavsap'
+    name = 'ksumngs/yavsap'
     author = 'Thomas A. Christensen II'
     homePage = 'https://ksumngs.github.io/yavsap'
     description = 'Identification and analysis of viral haplotypes in metagenomic NGS reads'
