--- a/nextflow.config
+++ b/nextflow.config
@@ -162,7 +162,7 @@ profiles {
     }
     docker {
         docker.enabled         = true
-        docker.userEmulation   = true
+        docker.runOptions      = '-u $(id -u):$(id -g)'
         singularity.enabled    = false
         podman.enabled         = false
         shifter.enabled        = false
